# tidy-inbox

./: .gitignore  .windsurfrules  README.md  pyproject.toml  tidy_inbox.py
